--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -6,7 +6,7 @@
   margin: 0; /* Remove any default margin */
 }
 
-/* Left side: Background Image */
+/* Left side: Background Image.. */
 .login-image {
   flex: 1;
   background-image: url('../assets/login.png'); /* Ensure path is correct */
