--- a/src/components/SignupPage.css
+++ b/src/components/SignupPage.css
@@ -7,7 +7,7 @@
 
 body, html {
   height: 100%;
-  overflow: hidden; /* Prevent scrolling on the main page. */
+  overflow: hidden; /* Prevent scrolling on the main page.. */
 }
 
 .signup-page {
